# RTX-Remix-Artemis-Edition

./: .gitignore  build_dxvk_opti.ps1  meson.build
.github/workflows/: build.yml
include/MathLib/: IntrinEmu.h  MathLib.h
public/include/remix/: remix_c.h
scripts-common/: compile_shaders.py
src/d3d9/: d3d9_common_buffer.cpp  d3d9_rtx.cpp  d3d9_rtx_utils.cpp
src/dxso/: dxso_compiler.cpp
src/dxvk/: dxvk_adapter.cpp  dxvk_buffer.cpp  dxvk_context.h  dxvk_device_info.h  dxvk_extensions.h  dxvk_instance.cpp  dxvk_memory.cpp  dxvk_pipelayout.cpp  dxvk_pipemanager.cpp  dxvk_raytracing.cpp  dxvk_shader.cpp  dxvk_shader.h  dxvk_state_cache.cpp  meson.build
src/dxvk/imgui/: dxvk_imgui.cpp  dxvk_imgui_capture.cpp
src/dxvk/rtx_render/: rtx_accel_manager.cpp  rtx_accel_manager.h  rtx_asset_replacer.h  rtx_camera.h  rtx_context.cpp  rtx_context.h  rtx_debug_view.cpp  rtx_draw_call_cache.cpp  rtx_game_capturer.cpp  rtx_game_capturer.h  rtx_geometry_utils.cpp  rtx_light_manager.h  (+13 more)
src/dxvk/rtx_render/rtx_megageo/: RTX_MG_IMPLEMENTATION_COMPLETE.md  RTX_MG_INTEGRATION_STATUS.md  meson.build  rtx_megageo_builder.cpp  rtx_megageo_builder.h  rtx_megageo_integration.h  rtxmg_log.h
src/dxvk/rtx_render/rtx_megageo/cluster_builder/: cluster.h  cluster_accel_builder.cpp  cluster_accel_builder.h  cluster_accels.h  compute_cluster_tiling_params.h  copy_cluster_offset_params.h  fill_blas_from_clas_args_params.h  fill_clusters_params.h  tessellation_counters.h  tessellator_config.h  tessellator_constants.h
src/dxvk/rtx_render/rtx_megageo/hiz/: hiz_buffer.cpp  hiz_buffer.h  hiz_buffer_constants.h  zbuffer.cpp  zbuffer.h
src/dxvk/rtx_render/rtx_megageo/nvrhi_adapter/: donut_adapter.cpp  nvrhi_dxvk_buffer.h  nvrhi_dxvk_command_list.cpp  nvrhi_dxvk_command_list.h  nvrhi_dxvk_command_list_cluster_translate.cpp.tmp  nvrhi_dxvk_device.cpp  nvrhi_dxvk_device.h  nvrhi_dxvk_pipeline.h  nvrhi_dxvk_sampler.h  nvrhi_dxvk_shader.h  nvrhi_dxvk_texture.h  nvrhi_scratch_manager.cpp  nvrhi_scratch_manager.h  nvrhi_types.h
src/dxvk/rtx_render/rtx_megageo/osd_lite/: .gitignore  CMakeLists.txt  NOTICE.txt  README.md  build_and_package.sh
src/dxvk/rtx_render/rtx_megageo/osd_lite/opensubdiv/: CMakeLists.txt  Config.cmake.in  msvc_osd.natvis.in  version.cpp  version.h  version.h.in
src/dxvk/rtx_render/rtx_megageo/osd_lite/opensubdiv/bfr/: CMakeLists.txt  faceSurface.cpp  faceSurface.h  faceTopology.cpp  faceTopology.h  faceVertex.cpp  faceVertex.h  faceVertexSubset.h  hash.cpp  hash.h  irregularPatchBuilder.cpp  irregularPatchBuilder.h  irregularPatchType.h  limits.h  parameterization.cpp  parameterization.h  patchTree.cpp  patchTree.h  patchTreeBuilder.cpp  patchTreeBuilder.h  pointOperations.h  refinerSurfaceFactory.cpp  refinerSurfaceFactory.h  regularPatchBuilder.cpp  regularPatchBuilder.h  surface.cpp  surface.h  surfaceData.cpp  surfaceData.h  surfaceFactory.cpp  surfaceFactory.h  surfaceFactoryCache.cpp  surfaceFactoryCache.h  surfaceFactoryMeshAdapter.h  tessellation.cpp  tessellation.h  vertexDescriptor.cpp  vertexDescriptor.h  vertexTag.h
src/dxvk/rtx_render/rtx_megageo/osd_lite/opensubdiv/far/: CMakeLists.txt  bilinearPatchBuilder.cpp  bilinearPatchBuilder.h  catmarkPatchBuilder.cpp  catmarkPatchBuilder.h  error.cpp  error.h  loopPatchBuilder.cpp  loopPatchBuilder.h  patchBasis.cpp  patchBasis.h  patchBuilder.cpp  patchBuilder.h  patchDescriptor.cpp  patchDescriptor.h  patchMap.cpp  patchMap.h  patchParam.h  patchTable.cpp  patchTable.h  patchTableFactory.cpp  patchTableFactory.h  primvarRefiner.h  ptexIndices.cpp  ptexIndices.h  sparseMatrix.h  stencilBuilder.cpp  stencilBuilder.h  stencilTable.cpp  stencilTable.h  stencilTableFactory.cpp  stencilTableFactory.h  topologyDescriptor.cpp  topologyDescriptor.h  topologyLevel.h  topologyRefiner.cpp  topologyRefiner.h  topologyRefinerFactory.cpp  topologyRefinerFactory.h  types.h
src/dxvk/rtx_render/rtx_megageo/osd_lite/opensubdiv/sdc/: CMakeLists.txt  bilinearScheme.h  catmarkScheme.h  crease.cpp  crease.h  loopScheme.h  options.h  scheme.h  typeTraits.cpp  types.h
src/dxvk/rtx_render/rtx_megageo/osd_lite/opensubdiv/tmr/: CMakeLists.txt  neighborhood.cpp  neighborhood.h  neighborhoodBuilder.cpp  neighborhoodBuilder.h  nodeBase.h  nodeDescriptor.h  subdivisionPlan.cpp  subdivisionPlan.h  subdivisionPlanBuilder.cpp  subdivisionPlanBuilder.h  surfaceDescriptor.h  surfaceTable.cpp  surfaceTable.h  surfaceTableFactory.cpp  surfaceTableFactory.h  topologyMap.cpp  topologyMap.h  treeDescriptor.h  types.h  unorderedSubset.cpp  unorderedSubset.h
src/dxvk/rtx_render/rtx_megageo/osd_lite/opensubdiv/vtr/: CMakeLists.txt  array.h  componentInterfaces.h  fvarLevel.cpp  fvarLevel.h  fvarRefinement.cpp  fvarRefinement.h  level.cpp  level.h  quadRefinement.cpp  quadRefinement.h  refinement.cpp  refinement.h  sparseSelector.cpp  sparseSelector.h  stackBuffer.h  triRefinement.cpp  triRefinement.h  types.h
src/dxvk/rtx_render/rtx_megageo/profiler/: profiler_stub.cpp  profiler_stub.h
src/dxvk/rtx_render/rtx_megageo/scene/: camera.cpp  camera.h  instance.h  rtxmg_scene.cpp  rtxmg_scene.h
src/dxvk/rtx_render/rtx_megageo/shaders/cluster_builder/: compute_cluster_tiling.hlsl  copy_cluster_offset.hlsl  fill_blas_from_clas_args.hlsl  fill_clusters.hlsl  fill_instance_descs.hlsl  fill_instantiate_template_args.hlsl
src/dxvk/rtx_render/rtx_megageo/shaders/hiz/: hiz_display.hlsl  hiz_pass1.hlsl  hiz_pass2.hlsl  zbuffer_display.hlsl  zbuffer_minmax.hlsl
src/dxvk/rtx_render/rtx_megageo/subdivision/: box3.h  patch_param.h  shape.cpp  shape.h  subdivision_eval.hlsli  subdivision_plan_hlsl.h  subdivision_surface.cpp  subdivision_surface.h  topology_cache.cpp  topology_cache.h  topology_map.cpp  topology_map.h  vertex.h
src/dxvk/rtx_render/rtx_megageo/subdivision/osd_ports/tmr/: nodeDescriptor.h  subdivisionNode.h  surfaceDescriptor.h  treeDescriptor.h  types.h
src/dxvk/rtx_render/rtx_megageo/utils/: box3.h  buffer.cpp  buffer.h  debug.h  shader_debug.h  string_utils.cpp  string_utils.h  vectorlog.h
src/lssusd/: game_exporter.cpp
src/util/: util_threadpool.h
(+121 files in other folders)
